# nap-derive-poc

./: Cargo.toml  LICENSE  README.md
nap/: Cargo.toml
nap/src/: lib.rs
nap_derive/: Cargo.toml
nap_derive/src/: arguments.rs  lib.rs
nu_plugin_mtg/: Cargo.toml
nu_plugin_mtg/src/: main.rs  values.rs
nu_plugin_syn/: Cargo.toml
nu_plugin_syn/src/: api.rs  console_hacks.rs  errors.rs  login.rs  main.rs  values.rs
