[package]
name = "nu_plugin_mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.77.1"
nap = { path = "../nap" }
nu-protocol = "0.77.1"
nap_derive = { path = "../nap_derive" }
scryfall = "0.12.4"
tokio = "1.27.0"
