[package]
name = "nu_plugin_syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.77.1" 
nap = { path = "../nap" }
nu-protocol = "0.77.1"
nap_derive = { path = "../nap_derive" }
dialoguer = "0.10.4"
cfg-if = "1.0.0"
once_cell = "1.17.1"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
tokio = "1.27.0"
serde = { version = "1.0.160", features = ["derive"] }
rustls = "0.18.1"
webpki-roots = "0.21.1"
pretty_env_logger = "0.4.0"
serde_json = "1.0.96"
keyring = "2.0.2"
futures = "0.3.28"
thiserror = "1.0.40"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }
